表紙を作成

--- a/graduation_thesis.tex
+++ b/graduation_thesis.tex
@@ -33,12 +33,12 @@
   lineskip=-0.5ex%
 }
 
-% \title{タイトル}
-% \author{}
-% \date{}
+\title{2017年度後期　卒業論文\\　\\SNSのCookieを利用した\\サイバー犯罪の犯人特定手法}
+\author{立命館大学　情報理工学部　情報システム学科\\青木 宏祐\\学籍番号：2600140002-8\\担当教員：上原 哲太郎 教授}
+\date{2018年1月29日}
 
 \begin{document}
-% \maketitle
+\maketitle
 
 % ----------------------------------------------------------------------------------------------------
 \tableofcontents
