概要を追加

--- a/graduation_thesis.tex
+++ b/graduation_thesis.tex
@@ -41,6 +41,13 @@
 \maketitle
 
 % ----------------------------------------------------------------------------------------------------
+
+% 概要
+\begin{abstract}
+インターネットの普及に伴って，インターネットを悪用したサイバー犯罪が横行している．サイバー犯罪が発生すると，サービスの顧客や運営が大きな損失を被るので問題である．そのため，サイバー犯罪の被害を未然に防ぐだけでなく，被害が発生した際に犯人を特定することが重要である．サイバー犯罪の犯人を特定する手法として，IPアドレスを用られることが多いが，ネットワーク技術の進歩により，近年ではIPアドレスによる特定が困難になってきている．そこで，本研究ではIPアドレス以外の情報を用いた特定手法として，Cookieを利用した手法を提案する．Cookieの中でも特にSNS(ソーシャルネットワーキングサービス)のCookieに着目した手法を提案する．近年では多くのインターネット利用者がSNSを利用している．また，近年のWebサイトでは，閲覧者に記事を広めてもらうためにSNSのシェアボタンを設置していることが多い．本研究では，SNSのシェアボタンを設置した匿名掲示板サイトとSNSサイトを用意し，SNSのシェアボタンを読み込む際に送信されるCookieをもとに，匿名掲示板に書込みを行った者のSNSのアカウントを特定する実験を行った．実験の結果，被験者15名のうち，13名の被験者のSNSのアカウントを特定することに成功した．SNSのCookieを利用した本研究の提案手法は，IPアドレスによる特定よりも特定可能性が高いという結論に至った．
+\end{abstract}
+
+% 目次
 \tableofcontents
 
 \chapter{はじめに}
