--- a/memoranda/todo.txt
+++ b/memoranda/todo.txt
@@ -4,7 +4,8 @@
 【文章を確認しつつちょっと変更を加える必要があるもの】
 ・参考文献つぎたし
   - まだ足りていないところがあるかも
-  - 番号が引用順になっているかを要確認！
+  - 番号が引用順になっているかを要確認
+・実験結果のデータを書き間違えていないか要確認
 
 【その他】
 ・提出する論文では謝辞のコメントを外すこと！！
